force-app/main/default/objects/DecisionRealEstateCheck__c/DecisionRealEstateCheck__c.object-meta.xml
<CustomObject>
    <label>決定物件チェック</label>
    <nameField>
        <displayFormat>DR-{00000000}</displayFormat>
        <label>決定物件チェック名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>