force-app/main/default/objects/DecisionRealEstateCheck__c/fields/AtHomeNonDisplayIsCorporateHousingD__c.field-meta.xml
<CustomField>
    <fullName>AtHomeNonDisplayIsCorporateHousingD__c</fullName>
    <formula>&quot;&quot;</formula>
    <label>在宅非表示フラグ_社宅D</label>
    <type>Text</type>
</CustomField>