force-app/main/default/objects/DecisionRealEstateCheck__c/fields/DecisionRealEstateCheckId__c.field-meta.xml
<CustomField>
    <fullName>DecisionRealEstateCheckId__c</fullName>
    <externalId>true</externalId>
    <label>決定物件チェックID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>