force-app/main/default/objects/DecisionRealEstateCheck__c/fields/Message3__c.field-meta.xml
<CustomField>
    <fullName>Message3__c</fullName>
    <label>メッセージ3</label>
    <type>TextArea</type>
</CustomField>