force-app/main/default/objects/DecisionRealEstateCheck__c/fields/Message5__c.field-meta.xml
<CustomField>
    <fullName>Message5__c</fullName>
    <label>メッセージ5</label>
    <type>TextArea</type>
</CustomField>