force-app/main/default/objects/DecisionRealEstateCheck__c/fields/Message9__c.field-meta.xml
<CustomField>
    <fullName>Message9__c</fullName>
    <label>メッセージ9</label>
    <type>TextArea</type>
</CustomField>