force-app/main/default/objects/DecisionRealEstateCheck__c/fields/NewMatter__c.field-meta.xml
<CustomField>
    <fullName>NewMatter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>新規</label>
    <referenceTo>NewMatter__c</referenceTo>
    <relationshipLabel>決定物件チェック</relationshipLabel>
    <relationshipName>NewMatterDecisionRealEstateCheck</relationshipName>
    <type>Lookup</type>
</CustomField>