force-app/main/default/objects/DecisionRealEstateCheck__c/fields/Question8__c.field-meta.xml
<CustomField>
    <fullName>Question8__c</fullName>
    <label>質問事項8</label>
    <type>TextArea</type>
</CustomField>