force-app/main/default/objects/DecisionRealEstateCheck__c/fields/Reply10__c.field-meta.xml
<CustomField>
    <fullName>Reply10__c</fullName>
    <label>回答10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DecisionRealEstateCheckReply</valueSetName>
    </valueSet>
</CustomField>