force-app/main/default/objects/DecisionRealEstateCheck__c/fields/Reply2__c.field-meta.xml
<CustomField>
    <fullName>Reply2__c</fullName>
    <label>回答2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DecisionRealEstateCheckReply</valueSetName>
    </valueSet>
</CustomField>