force-app/main/default/objects/DecisionRealEstateCheck__c/fields/ReplyCategory__c.field-meta.xml
<CustomField>
    <fullName>ReplyCategory__c</fullName>
    <label>回答区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>企業回答</fullName>
            </value>
            <value>
                <fullName>不動産回答</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>