force-app/main/default/objects/DecisionRealEstateCheck__c/fields/ReplyContent1__c.field-meta.xml
<CustomField>
    <fullName>ReplyContent1__c</fullName>
    <label>回答内容1</label>
    <type>TextArea</type>
</CustomField>