force-app/main/default/objects/DecisionRealEstateCheck__c/fields/ReplyContent3__c.field-meta.xml
<CustomField>
    <fullName>ReplyContent3__c</fullName>
    <label>回答内容3</label>
    <type>TextArea</type>
</CustomField>