force-app/main/default/objects/DecisionRealEstateCheck__c/fields/ReplyContent4__c.field-meta.xml
<CustomField>
    <fullName>ReplyContent4__c</fullName>
    <label>回答内容4</label>
    <type>TextArea</type>
</CustomField>